[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/level.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Area2D.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Assets/TileSets/TileSet.tres" type="TileSet" id=4]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Location/Swamp/Background.jpg" type="Texture" id=6]
[ext_resource path="res://Shaders/mirror.gdshader" type="Shader" id=7]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="OpenSimplexNoise" id=2]

[sub_resource type="NoiseTexture" id=3]
seamless = true
noise = SubResource( 2 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 7 )
shader_param/ref = -1.0
shader_param/color = Color( 0.12549, 0.427451, 0.678431, 0.458824 )
shader_param/dis_scale = Vector2( 0.408, 0.05 )
shader_param/intensity = 0.07
shader_param/speed = 0.05
shader_param/noise = SubResource( 3 )

[sub_resource type="OpenSimplexNoise" id=5]

[sub_resource type="NoiseTexture" id=6]
seamless = true
noise = SubResource( 5 )

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 7 )
shader_param/ref = 1.0
shader_param/color = Color( 0.176471, 0.447059, 0.764706, 0.564706 )
shader_param/dis_scale = Vector2( 0.408, 0.05 )
shader_param/intensity = 0.07
shader_param/speed = 0.05
shader_param/noise = SubResource( 6 )

[sub_resource type="StreamTexture" id=8]
flags = 4
load_path = "res://.import/icon.png-487276ed1e3a0c39cad0279d744ee560.stex"

[node name="Level2" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
collision_mask = 15
format = 1
tile_data = PoolIntArray( -196609, 2, 1, -262112, 2, 1, -131073, 2, 1, -196576, 2, 1, -65537, 2, 1, -131040, 2, 1, -1, 2, 1, -65523, 6, 0, -65505, 73, 0, -65504, 2, 1, 65535, 2, 1, 14, 6, 0, 15, 73, 65536, 16, 73, 65539, 32, 2, 1, 131071, 2, 1, 65536, 73, 196608, 65537, 73, 196608, 65538, 73, 196608, 65549, 6, 0, 65551, 73, 65536, 65552, 73, 65539, 65557, 73, 0, 65558, 73, 2, 65559, 73, 0, 65560, 73, 0, 65561, 73, 0, 65562, 73, 0, 65563, 73, 0, 65564, 73, 0, 65565, 73, 0, 65566, 73, 0, 65567, 73, 0, 65568, 2, 1, 196607, 2, 1, 131074, 73, 196608, 131086, 6, 0, 131087, 73, 65536, 131088, 73, 65539, 131093, 73, 131072, 131094, 73, 131074, 131097, 0, 196608, 131100, 73, 196608, 131101, 73, 196608, 131104, 2, 1, 262143, 2, 1, 196613, 73, 196608, 196621, 6, 0, 196623, 73, 65536, 196624, 73, 65539, 196625, 73, 0, 196633, 73, 196608, 196634, 73, 196608, 196635, 73, 196608, 196640, 2, 1, 327679, 2, 1, 262147, 73, 196608, 262148, 73, 196608, 262149, 73, 196613, 262158, 73, 196608, 262159, 73, 65536, 262160, 73, 65539, 262161, 73, 0, 262171, 0, 196608, 262176, 2, 1, 393215, 2, 1, 327682, 73, 196608, 327683, 73, 196608, 327693, 73, 196608, 327695, 73, 65536, 327696, 73, 65539, 327697, 73, 0, 327698, 73, 0, 327706, 0, 196608, 327707, 0, 196608, 327712, 2, 1, 458751, 2, 1, 393216, 73, 196608, 393228, 73, 196608, 393229, 73, 196608, 393231, 73, 65536, 393232, 73, 65539, 393234, 73, 0, 393235, 73, 0, 393236, 0, 196608, 393241, 0, 196608, 393246, 73, 196608, 393248, 2, 1, 524287, 2, 1, 458752, 73, 196608, 458757, 24, 0, 458759, 73, 196608, 458760, 73, 196608, 458761, 73, 196608, 458767, 73, 65536, 458768, 73, 65539, 458772, 73, 196608, 458773, 73, 196608, 458774, 73, 196608, 458776, 0, 196608, 458781, 73, 196608, 458784, 2, 1, 589823, 2, 1, 524289, 73, 196608, 524303, 73, 65536, 524304, 73, 65539, 524305, 0, 1, 524306, 0, 1, 524307, 0, 1, 524308, 0, 1, 524309, 0, 1, 524310, 0, 1, 524315, 73, 196608, 524316, 73, 196608, 524318, 0, 196608, 524320, 2, 1, 655359, 2, 1, 589825, 73, 196608, 589836, 0, 196608, 589837, 0, 1, 589838, 0, 1, 589839, 73, 65536, 589840, 73, 65539, 589850, 73, 196608, 589851, 0, 196608, 589856, 2, 1, 720895, 2, 1, 655362, 73, 196608, 655369, 0, 262150, 655370, 0, 196608, 655371, 73, 0, 655372, 73, 2, 655375, 73, 65536, 655376, 73, 65539, 655377, 73, 196608, 655378, 73, 196608, 655385, 73, 196608, 655392, 2, 1, 786431, 2, 1, 720898, 73, 196608, 720899, 3, 0, 720900, 73, 196608, 720901, 73, 196608, 720902, 73, 196608, 720903, 73, 196608, 720904, 73, 196608, 720905, 0, 196608, 720907, 73, 131072, 720908, 73, 327682, 720909, 73, 196610, 720910, 73, 196611, 720911, 73, 65536, 720912, 73, 65539, 720915, 73, 196608, 720922, 2, 1, 720928, 2, 1, 851967, 2, 1, 786438, 21, 0, 786447, 73, 65536, 786448, 73, 65539, 786449, 2, 131075, 786454, 73, 196608, 786457, 0, 196608, 786464, 2, 1, 917503, 2, 1, 851971, 6, 0, 851978, 2, 0, 851979, 2, 65538, 851980, 2, 65538, 851981, 2, 131075, 851983, 73, 65536, 851984, 73, 65539, 851989, 73, 196608, 851991, 0, 196608, 851992, 0, 196608, 851993, 0, 196608, 852000, 2, 1, 983039, 2, 1, 917504, 3, 0, 917506, 73, 196608, 917507, 73, 196608, 917508, 73, 196608, 917509, 73, 196608, 917510, 73, 196608, 917511, 73, 196608, 917512, 73, 196608, 917513, 73, 196608, 917514, 73, 196608, 917515, 73, 196608, 917516, 73, 196608, 917517, 73, 196608, 917518, 3, 0, 917519, 73, 65536, 917520, 73, 65539, 917524, 73, 196608, 917526, 0, 196608, 917536, 2, 1, 1048575, 2, 1, 983055, 73, 65536, 983056, 73, 65539, 983059, 73, 196608, 983064, 73, 196608, 983065, 73, 196608, 983066, 73, 196608, 983072, 2, 1, 1114111, 2, 1, 1048576, 73, 196608, 1048591, 73, 65536, 1048592, 73, 65539, 1048594, 73, 196608, 1048595, 0, 196608, 1048603, 73, 196608, 1048604, 73, 196608, 1048605, 73, 196608, 1048608, 2, 1, 1179647, 2, 1, 1114113, 73, 196608, 1114115, 2, 0, 1114116, 2, 65539, 1114117, 2, 65539, 1114118, 2, 65539, 1114119, 2, 65539, 1114120, 2, 65539, 1114121, 2, 65539, 1114122, 2, 65539, 1114123, 2, 65539, 1114124, 2, 65539, 1114125, 2, 65539, 1114126, 2, 2, 1114127, 73, 65536, 1114128, 73, 65539, 1114129, 73, 196608, 1114144, 2, 1, 1245183, 2, 65536, 1179648, 2, 1, 1179649, 2, 1, 1179650, 2, 1, 1179651, 2, 65538, 1179652, 2, 65538, 1179653, 2, 65538, 1179654, 2, 65538, 1179655, 2, 65538, 1179656, 2, 65538, 1179657, 2, 65538, 1179658, 2, 65538, 1179659, 2, 65538, 1179660, 2, 65538, 1179661, 2, 65538, 1179662, 2, 65538, 1179663, 2, 1, 1179664, 2, 1, 1179665, 2, 1, 1179666, 2, 1, 1179667, 2, 1, 1179668, 2, 1, 1179669, 2, 1, 1179670, 2, 1, 1179671, 2, 1, 1179672, 2, 1, 1179673, 2, 1, 1179674, 2, 1, 1179675, 2, 1, 1179676, 2, 1, 1179677, 2, 1, 1179678, 2, 1, 1179679, 2, 1, 1179680, 2, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 512, 24 )
scale = Vector2( 64, 1 )
collision_layer = 16
collision_mask = 2
script = ExtResource( 2 )
_listenerNodePath = "/root/root"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 280.543, 202.597 )
speed = 300
jump_speed = -800
gravity = 50

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 256, 0 )
current = true
limit_left = 0
limit_right = 1024
limit_bottom = 700
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_top = 0.6
drag_margin_right = 0.3
editor_draw_limits = true

[node name="Player_copy" parent="." instance=ExtResource( 5 )]
position = Vector2( 704.543, 202.597 )
speed = -300
jump_speed = -800
gravity = 50

[node name="left-mirror" type="Sprite" parent="."]
material = SubResource( 4 )
position = Vector2( 496, 298 )
scale = Vector2( 0.5, 10 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="right-mirror" type="Sprite" parent="."]
material = SubResource( 7 )
position = Vector2( 528, 298 )
scale = Vector2( 0.5, 10 )
texture = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_limit_end = Vector2( 0, 648 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
centered = false

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]
